[tool.poetry]
name = "filibustr-api"
version = "0.1.0"
description = "Backend for Filibustr civic policy app"
authors = ["Taylor Turner <resume.tturner@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "filibustr_api" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.35.0,<0.36.0"
requests = ">=2.32.4,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.1.0"
python-jose = "^3.5.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
